Edit to do list

--- a/Project To-Do List.html
+++ b/Project To-Do List.html
@@ -201,7 +201,7 @@
             <li>Margin</li>
             <li>Size</li>
             <li>Border</li>
-            <li>More...</li>
+            <li>More..</li>
         </ul>
     </li>
 
